lambda/tests/compile-fail/no-args.rs
#![feature(async_await)]

#[lambda_attributes::lambda]
async fn main() {}
