lambda/tests/compile-fail/no-args.stderr
error: The #[lambda] macro can accept one or two arguments.
 --> $DIR/no-args.rs:3:1
  |
3 | #[lambda_attributes::lambda]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0601]: `main` function not found in crate `$CRATE`
  |
  = note: consider adding a `main` function to `$DIR/tests/compile-fail/no-args.rs`

For more information about this error, try `rustc --explain E0601`.
